<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_widget">Hijri date, prayer times and shortcuts</string>
    <string name="hijri_date">Hijri Date</string>
    <string name="bangali_date">Bangali Date</string>
    <string name="gregorian_date">Gregorian Date</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="location">Location</string>
    <string name="current_prayer">Current Prayer</string>
    <string name="next_prayer">Next Prayer</string>
    <string name="reload">Reload</string>
    <string name="quran">Quran</string>
    <string name="books">Books</string>
    <string name="bayans">Bayans</string>
    <string name="malfuzat">Malfuzat</string>
    <string name="masail">Masail</string>
    <string name="duas">Dua Durud</string>
</resources>
