<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/widget_container"
  style="@style/Widget.Android.AppWidget.Container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:theme="@style/Theme.Android.AppWidgetContainer">

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:baselineAligned="false">

      <LinearLayout
        android:id="@+id/dates"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:paddingTop="4dp"
        android:paddingBottom="6dp"
        android:orientation="vertical">

        <ImageView
          android:id="@+id/hijriDate"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:contentDescription="@string/hijri_date"
          android:scaleType="fitStart" />

        <LinearLayout
          android:id="@+id/otherDates"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="2dp"
          android:orientation="vertical">

          <ImageView
            android:id="@+id/bangaliDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/bangali_date"
            android:scaleType="fitStart" />

          <ImageView
            android:id="@+id/gregorianDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/gregorian_date"
            android:scaleType="fitStart" />
        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/sunriseSunset"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.7"
        android:layout_marginStart="5dp"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="vertical">

        <LinearLayout
          android:id="@+id/sunrise"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <ImageView
            android:id="@+id/sunriseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:contentDescription="@string/sunrise"
            android:scaleType="fitStart" />

          <ImageView
            android:id="@+id/sunriseTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/time"
            android:scaleType="fitStart" />
        </LinearLayout>

        <LinearLayout
          android:id="@+id/sunset"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <ImageView
            android:id="@+id/sunsetTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:contentDescription="@string/sunset"
            android:scaleType="fitStart" />

          <ImageView
            android:id="@+id/sunsetTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/time"
            android:scaleType="fitStart" />
        </LinearLayout>

        <LinearLayout
          android:id="@+id/locationContainer"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="bottom"
          android:orientation="vertical">

          <ImageView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location"
            android:scaleType="fitStart" />
        </LinearLayout>
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
      android:id="@+id/prayer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="12dp">

      <LinearLayout
        android:id="@+id/currentPrayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
          android:id="@+id/currentPrayerTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/current_prayer"
          android:scaleType="fitStart" />

        <ImageView
          android:id="@+id/currentPrayerTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="2dp"
          android:layout_marginTop="3dp"
          android:contentDescription="@string/time"
          android:scaleType="fitStart" />
      </LinearLayout>

      <ImageView
        android:id="@+id/nextPrayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_prayer"
        android:scaleType="fitStart" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/links"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/quran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="2dp"
        android:layout_weight="1.2"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:contentDescription="@string/quran"
        android:src="@drawable/quran" />

      <ImageView
        android:id="@+id/books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="2dp"
        android:layout_weight="1.2"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:contentDescription="@string/books"
        android:src="@drawable/book" />

      <ImageView
        android:id="@+id/bayans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="2dp"
        android:layout_weight="0.6"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:contentDescription="@string/bayans"
        android:src="@drawable/bayan" />

      <ImageView
        android:id="@+id/malfuzat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="2dp"
        android:layout_weight="0.9"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:contentDescription="@string/malfuzat"
        android:src="@drawable/malfuzat" />

      <ImageView
        android:id="@+id/masail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="2dp"
        android:layout_weight="1.1"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:contentDescription="@string/masail"
        android:src="@drawable/masail" />

      <ImageView
        android:id="@+id/duas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="2dp"
        android:layout_weight="1.1"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:contentDescription="@string/duas"
        android:src="@drawable/dua" />
    </LinearLayout>
  </LinearLayout>
</RelativeLayout>
